--- a/WindowsFormsSample/WindowsFormsSample.csproj
+++ b/WindowsFormsSample/WindowsFormsSample.csproj
@@ -51,7 +51,6 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -86,6 +85,9 @@
       <Project>{3ee156e1-fede-4ec5-b64a-3287ec3ab2e3}</Project>
       <Name>MeCab.DotNet</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
