--- a/MeCab.DotNet/MeCab.DotNet.csproj
+++ b/MeCab.DotNet/MeCab.DotNet.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="dic\*.*" CopyToOutputDirectory="PreserveNewest" PackagePath="content/" />
+    <Content Include="dic\*.*" CopyToOutputDirectory="PreserveNewest" PackagePath="content/dic/" />
   </ItemGroup>
 
   <ItemGroup>
