--- a/MeCab.DotNet.Tests/MeCab.DotNet.Tests.csproj
+++ b/MeCab.DotNet.Tests/MeCab.DotNet.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <RootNamespace>LibNMeCabTest</RootNamespace>
+    <RootNamespace>MeCab</RootNamespace>
 
     <DebugType>pdbonly</DebugType>
     <DebugSymbols>true</DebugSymbols>
