--- a/MeCab.DotNet/MeCab.DotNet.csproj
+++ b/MeCab.DotNet/MeCab.DotNet.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net40;net45;netstandard1.3;netstandard2.0;netstandard2.1</TargetFrameworks>
-    <RootNamespace>NMeCab</RootNamespace>
+    <RootNamespace>MeCab</RootNamespace>
 
     <DebugType>pdbonly</DebugType>
     <DebugSymbols>true</DebugSymbols>
