--- a/MeCab.DotNet/MeCab.DotNet.csproj
+++ b/MeCab.DotNet/MeCab.DotNet.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net20;net35-client;net40-client;net45;netstandard1.3;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net20;net35-client;net40-client;net45;netstandard1.3;netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
     <RootNamespace>MeCab</RootNamespace>
 
     <DebugType>pdbonly</DebugType>
@@ -13,11 +13,11 @@
     <NoWarn>1591,1572,1573</NoWarn>
 
     <PackageId>MeCab.DotNet</PackageId>
-    <AssemblyTitle>MeCab.DotNet - Morphological analysis engine for .NET Core 1/2/3 and .NET Frameworks managed library.</AssemblyTitle>
+    <AssemblyTitle>MeCab.DotNet - Morphological analysis engine for .NET 5, .NET Core 1/2/3 and .NET Frameworks managed library.</AssemblyTitle>
     <Product>MeCab.DotNet</Product>
     <Trademark>MeCab.DotNet</Trademark>
-    <Copyright>Copyright (c) 2001-2008, Taku Kudo; Copyright (c) 2004-2008, Nippon Telegraph and Telephone Corporation; Copyright (c) 2015 Tsuyoshi Komuta; Portions Copyright (c) 2019 Kouji Matsui</Copyright>
-    <Description>MeCab.DotNet - Morphological analysis engine for .NET Core 1/2/3 and .NET Frameworks managed library.</Description>
+    <Copyright>Copyright (c) 2001-2008, Taku Kudo; Copyright (c) 2004-2008, Nippon Telegraph and Telephone Corporation; Copyright (c) 2015 Tsuyoshi Komuta; Portions Copyright (c) 2019-2020 Kouji Matsui</Copyright>
+    <Description>MeCab.DotNet - Morphological analysis engine for .NET 5, .NET Core 1/2/3 and .NET Frameworks managed library.</Description>
     <Company>Nippon Telegraph and Telephone Corporation</Company>
     <Authors>Taku Kudo; Tsuyoshi Komuta; Kouji Matsui (@kozy_kekyo)</Authors>
     <RepositoryType>git</RepositoryType>
@@ -43,6 +43,7 @@
 
   <ItemGroup>
     <PackageReference Include="CenterCLR.RelaxVersioner" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
