--- a/WindowsFormsSample/WindowsFormsSample.csproj
+++ b/WindowsFormsSample/WindowsFormsSample.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net45;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net45;netcoreapp3.1;net5.0-windows</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
 
     <DebugType>pdbonly</DebugType>
