Added nuget in-place indicator. #4

--- a/MeCab.DotNet/MeCab.DotNet.csproj
+++ b/MeCab.DotNet/MeCab.DotNet.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Content Include="build\*.*" CopyToOutputDirectory="Never" PackagePath="build/" />
     <Content Include="buildMultiTargeting\*.*" CopyToOutputDirectory="Never" PackagePath="buildMultiTargeting/" />
+    <None Include="InPackage" Pack="true" PackagePath="lib/$(TargetFramework)/" />
   </ItemGroup>
 
 </Project>
