Adjusted package versions.

--- a/PerformanceTest/PerformanceTest.csproj
+++ b/PerformanceTest/PerformanceTest.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net45;netcoreapp3.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>net48;net6.0</TargetFrameworks>
     <RootNamespace>LibNMeCabTest</RootNamespace>
 
     <DebugType>portable</DebugType>
