--- a/WindowsFormsSample/WindowsFormsSample.csproj
+++ b/WindowsFormsSample/WindowsFormsSample.csproj
@@ -2,13 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net45;netcoreapp3.1;net5.0-windows</TargetFrameworks>
+    <TargetFrameworks>net48;net6.0-windows</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
-
-    <DebugType>portable</DebugType>
-    <DebugSymbols>true</DebugSymbols>
-    <Platforms>AnyCPU</Platforms>
-    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
