Switched GA host to windows.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
 
     #-----------------------------------------------------------------------
@@ -20,9 +20,9 @@ jobs:
     - name: Extract branch name
       id: extract_branch_name
       run: |
-        export branch_name=`git name-rev --name-only --exclude=tags/* HEAD`
+        $branch_name=$(git name-rev --name-only --exclude=tags/* HEAD)
         echo "Detected current branch: ${branch_name}"
-        echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
+        echo "::set-output name=branch_name::${branch_name}"
 
     #-----------------------------------------------------------------------
     # Setup environments
