--- a/samples/WindowsFormsSample/WindowsFormsSample.csproj
+++ b/samples/WindowsFormsSample/WindowsFormsSample.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MeCab.DotNet\MeCab.DotNet.csproj" />
+    <ProjectReference Include="..\..\MeCab.DotNet\MeCab.DotNet.csproj" />
   </ItemGroup>
 
 </Project>
