--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     #-----------------------------------------------------------------------
     # Checkout
 
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0
     #   lfs: true
@@ -22,31 +22,21 @@ jobs:
       run: |
         $branch_name=$(git name-rev --name-only --exclude=tags/* HEAD)
         echo "Detected current branch: ${branch_name}"
-        echo "::set-output name=branch_name::${branch_name}"
+        echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
 
     #-----------------------------------------------------------------------
     # Setup environments
 
-    - name: Setup .NET 2.2
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET SDKs
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 2.2.*
-    - name: Setup .NET 3.1
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.*
-    - name: Setup .NET 5
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.*
-    - name: Setup .NET 6
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 6.0.*
-    - name: Setup .NET 7
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 7.0.*
+        dotnet-version: |
+          2.2.x
+          3.1.x
+          5.0.x
+          6.0.x
+          7.0.x
+          8.0.x
 
     - name: Setup NuGet package reference
       run: |
@@ -56,20 +46,17 @@ jobs:
     #-----------------------------------------------------------------------
     # Build
     
-    - name: NuGet restore
-      run: dotnet restore -p:Configuration=Release MeCab.DotNet.sln
-
     - name: Build
-      run: dotnet build -p:Configuration=Release -p:BuildIdentifier=${GITHUB_RUN_NUMBER} MeCab.DotNet.sln
+      run: dotnet build -p:Configuration=Release -p:Platform="Any CPU" -p:RestoreNoCache=True -p:BuildIdentifier=${GITHUB_RUN_NUMBER} MeCab.DotNet.sln
 
     - name: Build NuGet packages
-      run: dotnet pack -p:Configuration=Release -p:BuildIdentifier=${GITHUB_RUN_NUMBER} -o artifacts MeCab.DotNet.sln
+      run: dotnet pack -p:Configuration=Release -p:Platform="Any CPU" -p:BuildIdentifier=${GITHUB_RUN_NUMBER} -o artifacts MeCab.DotNet.sln
 
     #-----------------------------------------------------------------------
     # Test
 
     - name: Test
-      run: dotnet test --no-restore --verbosity normal -p:CITest=True MeCab.DotNet.sln
+      run: dotnet test --no-restore --verbosity normal -p:Configuration=Release -p:Platform="Any CPU" -p:CITest=True MeCab.DotNet.sln
       timeout-minutes: 10
 
     #-----------------------------------------------------------------------
